--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -3,5 +3,5 @@
   <input type="number" name="" id="" formControlName="paginas" #pagInput />{{OnInput()}}</label>
   <br>
   <label> Número de idiomas
-  <input type="number" name="" id="" formControlName="idiomas" #lgInput /></label>
+  <input type="number" name="" id="" formControlName="idiomas" #lgInput />{{OnInput()}}</label>
 </form>
