--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,24 @@
-<form [formGroup]="myReactiveForm">
-<div class="form-group">
-  <label for="trabajo">Qué quieres haser?</label>
-  <div *ngFor= "let trabajo of trabajos; let i = index">
-    <label>
-      <input type="checkbox" [value] = "trabajo.precio" (change) = "onCheckboxChange($event)">
-      {{trabajo.nombre}}
-      <div class="panel" *ngIf="i===0 && isChecked">
-        <app-panel (inputValues) = 'inputsResult($event)'></app-panel>
-      </div>
-    </label>
-  </div>
-</div>
 
-  <p id="preu" >Preu: {{precio}}  €</p>
+
+<form [formGroup]="myReactiveForm" class="m-3">
+  <div class="form-group">
+    <label for="trabajo">Qué quieres haser?</label>
+    <div *ngFor="let trabajo of trabajos; let i = index">
+      <label>
+        <input type="checkbox" [value]="trabajo.precio" [checked]="trabajo.isChecked" (click)="doCheckboxCheck(i)">
+        {{trabajo.nombre}}
+        <div class="panel" *ngIf="i===0 && trabajo.isChecked">
+          <app-panel [precio]='precio' (inputValues)='inputsResult($event)'></app-panel>
+        </div>
+      </label>
+    </div>
+  </div>
+
+  <p id="preu">Preu: {{precio}} {{result()}} €</p>
 </form>
+<button (click)="volver()" class="ms-3">Volver</button>
+
+
+
+
+
