--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -3,7 +3,7 @@
 
 <form class="container" [formGroup]="panelForm">
   <!-- borrar luego -->
-  {{blockPrecios()}}
+  <!-- {{blockPrecios()}} -->
   <label> Número de paginas
     <button (click)="increment(pagInput)">+</button>
     <input type="number" formControlName="paginas" #pagInput [value]="inputValue" />
