--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -17,7 +17,7 @@
       dignissimos culpa facere expedita quasi maiores quibusdam, quisquam magnam
       eum sunt corrupti. Commodi debitis eaque quis quisquam blanditiis.
     </p>
-    <button (click)="open()" class="btn btn btn-secondary" type="button">Comensar</button>
-
+  <button (click)="open()" class="btn btn btn-secondary" type="button">Comensar</button>
+<a [routerLink] = "['/homePage']"> Comenzar</a>
   </div>
 </body>
