--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -18,6 +18,6 @@
       eum sunt corrupti. Commodi debitis eaque quis quisquam blanditiis.
     </p>
   <button (click)="open()" class="btn btn btn-secondary" type="button">Comensar</button>
-<a [routerLink] = "['/homePage']"> Comenzar</a>
+<!-- <a [routerLink] = "['/homePage']"> Comenzar</a> -->
   </div>
 </body>
